# procrastination-police

./: README.md  procrastination_police.html  pyproject.toml  requirements.txt  requirements_new.txt  setup.sh  test_doomslayer.py  test_enhanced.py  test_office.py  test_opencv.py  test_simple.py  test_step1.py
assets/office-clips/: Oh God Please no edit.mov
config/: settings.yaml
src/: doomslayer_detector.py  enhanced_tracker.py  face_tracker.py  office_detector.py  opencv_tracker.py  popup_player.py  simple_face_tracker.py  somethinhg.js
steps/: 01-basic-face-detection.md  02-gaze-estimation.md
